[package]
name = "s3hash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.1.1"
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.8.0"
clap = { version = "4.4", features = ["derive"] }
futures = "0.3.30"
futures-util = { version = "0.3.30", features = ["tokio-io"] }
hex = "0.4"
lazy_static = "1.4.0"
log = "0.4"
num_cpus = "1.16.0"
sha2 = { version = "0.10.8", features = ["std", "asm", "asm-aarch64", "compress"] }
simplelog = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
